--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-group": "^3.0.2",
     "react-router": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
