--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "cross-env AUTOPREFIXER_GRID=autoplace gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "cross-env AUTOPREFIXER_GRID=autoplace react-scripts start",
     "build": "cross-env AUTOPREFIXER_GRID=autoplace react-scripts build",
     "test": "cross-env AUTOPREFIXER_GRID=autoplace react-scripts test",
