--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "autoprefixer": "^10.0.1",
     "react": "^16.13.1",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
@@ -23,17 +24,21 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "cross-env AUTOPREFIXER_GRID=autoplace react-scripts start",
-    "build": "cross-env AUTOPREFIXER_GRID=autoplace react-scripts build",
-    "test": "cross-env AUTOPREFIXER_GRID=autoplace react-scripts test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
+  "devDependencies": {
+    "cross-env": "^7.0.2",
+    "gh-pages": "^3.1.0"
+  },
   "browserslist": {
     "production": [
-      ">1%",
+      ">0.2%",
       "not dead",
       "not op_mini all"
     ],
@@ -43,10 +48,5 @@
       "last 1 safari version",
       "last 1 ie version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.0",
-    "cross-env": "^7.0.2",
-    "gh-pages": "^3.1.0"
   }
 }
