--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "react-lazy-with-preload": "^2.0.1",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
   },
   "scripts": {
     "predeploy": "npm run build",
